FIX: ensures border and shadow of header is visible

--- a/plugins/chat/assets/stylesheets/common/chat-navbar.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-navbar.scss
@@ -12,7 +12,7 @@
     height: 50px;
     box-sizing: border-box;
     display: flex;
-    z-index: z("header");
+    z-index: z("header") - 1;
   }
 }
 
